Updated desktop files

--- a/linux/Makefile
+++ b/linux/Makefile
@@ -41,7 +41,7 @@ FLUTTER_APP_DIR=$(CURDIR)/..
 FLUTTER_APP_BUILD_DIR=$(FLUTTER_APP_DIR)/build
 
 OUT_DIR=$(FLUTTER_APP_BUILD_DIR)/linux
-OBJ_DIR=$(OUT_DIR)/obj
+OBJ_DIR=$(OUT_DIR)/obj/$(BUILD)
 
 # Libraries
 FLUTTER_LIB_NAME=flutter_linux_glfw
